Bug 268300 - Digikam crash on confirm create new person
Summary: Digikam crash on confirm create new person
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Engine (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-12 17:29 UTC by les
Modified: 2012-06-27 10:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (10.32 KB, text/plain)
2011-03-13 13:07 UTC, Kristian Karl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description les 2011-03-12 17:29:39 UTC
Application: digikam (2.0.0-beta4)
KDE Platform Version: 4.6.1 (4.6.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-27-generic-pae i686
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:
I was Viewing an image, face was selected, I entered a new name, clicked  create new person, clicked confirm - Program then crashed. Have tried this again since starting this report and it crashed at the same point, but a different image and person.

The crash can be reproduced some of the time.

-- Backtrace:
Application: digiKam (digikam), signal: Aborted
[Current thread is 1 (Thread 0xaf11b890 (LWP 2357))]

Thread 15 (Thread 0xacdeab70 (LWP 2376)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb33ba4dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0xb4193d9d in __pthread_cond_wait (cond=0x9464fc0, mutex=0x9464fa8) at forward.c:139
#3  0xb45159c7 in wait (this=0x9464ed4, mutex=0x9464ed0, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#4  QWaitCondition::wait (this=0x9464ed4, mutex=0x9464ed0, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#5  0x08238b99 in Digikam::ScanController::run (this=0x9464ca0) at /build/buildd/digikam2-2.0.0~beta4+git110307/digikam/database/scancontroller.cpp:602
#6  0xb4514df9 in QThreadPrivate::start (arg=0x9464ca0) at thread/qthread_unix.cpp:266
#7  0xb33b5cc9 in start_thread (arg=0xacdeab70) at pthread_create.c:304
#8  0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 14 (Thread 0xac5e9b70 (LWP 2377)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb41940f3 in __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/lowlevellock.S:95
#2  0xb412865f in _L_lock_9687 () from /lib/libc.so.6
#3  0xb4126e56 in __libc_free (mem=0x9471798) at malloc.c:3736
#4  0xb4300441 in operator delete(void*) () from /usr/lib/libstdc++.so.6
#5  0xb46460b5 in QEventDispatcherGlib::unregisterSocketNotifier (this=0x946fbe0, notifier=0xac5e916c) at kernel/qeventdispatcher_glib.cpp:496
#6  0xb46341da in QSocketNotifier::setEnabled (this=0xfffffe00, enable=false) at kernel/qsocketnotifier.cpp:298
#7  0xb4645a02 in socketNotifierSourceCheck (source=0x9471088) at kernel/qeventdispatcher_glib.cpp:92
#8  0xb318ab39 in g_main_context_check () from /lib/libglib-2.0.so.0
#9  0xb318b45e in ?? () from /lib/libglib-2.0.so.0
#10 0xb318b848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#11 0xb4645565 in QEventDispatcherGlib::processEvents (this=0x946fbe0, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#12 0xb4615609 in QEventLoop::processEvents (this=0xac5e9110, flags=) at kernel/qeventloop.cpp:149
#13 0xb4615a8a in QEventLoop::exec (this=0xac5e9110, flags=...) at kernel/qeventloop.cpp:201
#14 0xb4511b7e in QThread::exec (this=0x946d5b0) at thread/qthread.cpp:490
#15 0xb45f435b in QInotifyFileSystemWatcherEngine::run (this=0x946d5b0) at io/qfilesystemwatcher_inotify.cpp:248
#16 0xb4514df9 in QThreadPrivate::start (arg=0x946d5b0) at thread/qthread_unix.cpp:266
#17 0xb33b5cc9 in start_thread (arg=0xac5e9b70) at pthread_create.c:304
#18 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 13 (Thread 0xabbffb70 (LWP 2525)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb33ba4dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0xb4193d9d in __pthread_cond_wait (cond=0x96a9818, mutex=0x96a9800) at forward.c:139
#3  0xb45159c7 in wait (this=0x959ed98, mutex=0x959ed94, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#4  QWaitCondition::wait (this=0x959ed98, mutex=0x959ed94, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#5  0xb6528eaa in Digikam::ParkingThread::run (this=0x959ed88) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/threads/threadmanager.cpp:119
#6  0xb4514df9 in QThreadPrivate::start (arg=0x959ed88) at thread/qthread_unix.cpp:266
#7  0xb33b5cc9 in start_thread (arg=0xabbffb70) at pthread_create.c:304
#8  0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 12 (Thread 0xa9d69b70 (LWP 2526)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb4177df6 in __poll (fds=0xb420eff4, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0xb3198a1b in g_poll () from /lib/libglib-2.0.so.0
#3  0xb318b43c in ?? () from /lib/libglib-2.0.so.0
#4  0xb318b848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0xb464559f in QEventDispatcherGlib::processEvents (this=0x967fa78, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#6  0xb4615609 in QEventLoop::processEvents (this=0xa9d69110, flags=) at kernel/qeventloop.cpp:149
#7  0xb4615a8a in QEventLoop::exec (this=0xa9d69110, flags=...) at kernel/qeventloop.cpp:201
#8  0xb4511b7e in QThread::exec (this=0x967e7c8) at thread/qthread.cpp:490
#9  0xb45f435b in QInotifyFileSystemWatcherEngine::run (this=0x967e7c8) at io/qfilesystemwatcher_inotify.cpp:248
#10 0xb4514df9 in QThreadPrivate::start (arg=0x967e7c8) at thread/qthread_unix.cpp:266
#11 0xb33b5cc9 in start_thread (arg=0xa9d69b70) at pthread_create.c:304
#12 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 11 (Thread 0xa32c7b70 (LWP 2527)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb33ba884 in pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_timedwait.S:236
#2  0xb4193df4 in __pthread_cond_timedwait (cond=0x99dc848, mutex=0x99dc830, abstime=0xa32c71a0) at forward.c:152
#3  0xa743db3f in ?? () from /usr/lib/libxine.so.1
Backtrace stopped: previous frame inner to this frame (corrupt stack?)

Thread 10 (Thread 0xa268eb70 (LWP 2528)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb417f371 in select () at ../sysdeps/unix/syscall-template.S:82
#2  0xa7469f1c in xine_usec_sleep () from /usr/lib/libxine.so.1
#3  0x00000000 in ?? ()

Thread 9 (Thread 0xa1e8db70 (LWP 2529)):
#0  0xb33b97d4 in __pthread_mutex_unlock_usercnt (mutex=0x9df1afc, decr=<value optimized out>) at pthread_mutex_unlock.c:52
#1  0xb4193fa6 in pthread_mutex_unlock (mutex=0x9df1afc) at forward.c:184
#2  0xb31894fb in g_main_context_release () from /lib/libglib-2.0.so.0
#3  0xb318b473 in ?? () from /lib/libglib-2.0.so.0
#4  0xb318b848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#5  0xb464559f in QEventDispatcherGlib::processEvents (this=0x9df1a78, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#6  0xb4615609 in QEventLoop::processEvents (this=0xa1e8d100, flags=) at kernel/qeventloop.cpp:149
#7  0xb4615a8a in QEventLoop::exec (this=0xa1e8d100, flags=...) at kernel/qeventloop.cpp:201
#8  0xb4511b7e in QThread::exec (this=0x9df1680) at thread/qthread.cpp:490
#9  0xa748dd7a in ?? () from /usr/lib/qt4/plugins/phonon_backend/phonon_xine.so
#10 0xb4514df9 in QThreadPrivate::start (arg=0x9df1680) at thread/qthread_unix.cpp:266
#11 0xb33b5cc9 in start_thread (arg=0xa1e8db70) at pthread_create.c:304
#12 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 8 (Thread 0xa168cb70 (LWP 2530)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb4177df6 in __poll (fds=0xb420eff4, nfds=2, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0xb40a4562 in ?? () from /usr/lib/libpulse.so.0
#3  0xb4090ab9 in pa_mainloop_poll () from /usr/lib/libpulse.so.0
#4  0xb4092a73 in pa_mainloop_iterate () from /usr/lib/libpulse.so.0
#5  0xb4092b44 in pa_mainloop_run () from /usr/lib/libpulse.so.0
#6  0xb40a4303 in ?? () from /usr/lib/libpulse.so.0
#7  0xb2d5bbd5 in ?? () from /usr/lib/libpulsecommon-0.9.21.so
#8  0xb33b5cc9 in start_thread (arg=0xa168cb70) at pthread_create.c:304
#9  0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 7 (Thread 0x9ce8ab70 (LWP 2531)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb33ba4dc in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/pthread_cond_wait.S:169
#2  0xb4193d9d in __pthread_cond_wait (cond=0xabc05308, mutex=0xabc052f0) at forward.c:139
#3  0xa744fb54 in ?? () from /usr/lib/libxine.so.1
#4  0x00000000 in ?? ()

Thread 6 (Thread 0x9c656b70 (LWP 3417)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb41940f3 in __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/lowlevellock.S:95
#2  0xb412865f in _L_lock_9687 () from /lib/libc.so.6
#3  0xb4126e56 in __libc_free (mem=0xc571f80) at malloc.c:3736
#4  0xb4300441 in operator delete(void*) () from /usr/lib/libstdc++.so.6
#5  0xb62f7bde in ~DSharedDataPointer (this=0xc1a8170, __in_chrg=<value optimized out>) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/dimg/dshareddata.h:165
#6  Digikam::DImg::~DImg (this=0xc1a8170, __in_chrg=<value optimized out>) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/dimg/dimg.cpp:171
#7  0xb650aa68 in Digikam::ThumbnailLoadingTask::~ThumbnailLoadingTask() () from /usr/lib/libdigikamcore.so.2
#8  0xb64dcae6 in Digikam::LoadSaveThread::run (this=0x9667580) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/threadimageio/loadsavethread.cpp:93
#9  0xb652ac90 in Digikam::DynamicThread::DynamicThreadPriv::run (this=0x96610e8) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/threads/dynamicthread.cpp:328
#10 0xb4509523 in QThreadPoolThread::run (this=0xb6da968) at concurrent/qthreadpool.cpp:106
#11 0xb4514df9 in QThreadPrivate::start (arg=0xb6da968) at thread/qthread_unix.cpp:266
#12 0xb33b5cc9 in start_thread (arg=0x9c656b70) at pthread_create.c:304
#13 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 5 (Thread 0xa5061b70 (LWP 3418)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb41940f3 in __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/lowlevellock.S:95
#2  0xb412865f in _L_lock_9687 () from /lib/libc.so.6
#3  0xb4126e56 in __libc_free (mem=0xa1d2330) at malloc.c:3736
#4  0xb4300441 in operator delete(void*) () from /usr/lib/libstdc++.so.6
#5  0xb464624a in QEventDispatcherGlib::~QEventDispatcherGlib (this=0xa1d2330, __in_chrg=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:394
#6  0xb45145ba in QThreadPrivate::finish (arg=0xa9acdb8) at thread/qthread_unix.cpp:302
#7  0xb4514e01 in ~__pthread_cleanup_class (arg=0xa9acdb8) at /usr/include/pthread.h:545
#8  QThreadPrivate::start (arg=0xa9acdb8) at thread/qthread_unix.cpp:271
#9  0xb33b5cc9 in start_thread (arg=0xa5061b70) at pthread_create.c:304
#10 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 4 (Thread 0xa4860b70 (LWP 3419)):
#0  0xb2d96e36 in clock_gettime (clock_id=-1294356492, tp=0xa485fe10) at ../sysdeps/unix/clock_gettime.c:100
#1  0xb457050b in do_gettime () at tools/qelapsedtimer_unix.cpp:105
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:119
#3  0xb46476e5 in QTimerInfoList::updateCurrentTime (this=0xb6dc734) at kernel/qeventdispatcher_unix.cpp:339
#4  0xb464772a in QTimerInfoList::timerWait (this=0xb6dc734, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0xb46457a8 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xa485ff3c) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb464583d in timerSourcePrepare (source=0x0, timeout=0xb2d9aff4) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb318ae6a in g_main_context_prepare () from /lib/libglib-2.0.so.0
#8  0xb318b279 in ?? () from /lib/libglib-2.0.so.0
#9  0xb318b848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#10 0xb464559f in QEventDispatcherGlib::processEvents (this=0xb0ce708, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#11 0xb4615609 in QEventLoop::processEvents (this=0xa4860120, flags=) at kernel/qeventloop.cpp:149
#12 0xb4615a8a in QEventLoop::exec (this=0xa4860120, flags=...) at kernel/qeventloop.cpp:201
#13 0xb652853c in Digikam::WorkerObjectRunnable::run (this=0x93d03500) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/threads/threadmanager.cpp:190
#14 0xb4509523 in QThreadPoolThread::run (this=0x940e850) at concurrent/qthreadpool.cpp:106
#15 0xb4514df9 in QThreadPrivate::start (arg=0x940e850) at thread/qthread_unix.cpp:266
#16 0xb33b5cc9 in start_thread (arg=0xa4860b70) at pthread_create.c:304
#17 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 3 (Thread 0x963ffb70 (LWP 3420)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb41940f3 in __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/lowlevellock.S:95
#2  0xb412865f in _L_lock_9687 () from /lib/libc.so.6
#3  0xb4126e56 in __libc_free (mem=0xb9f8ac0) at malloc.c:3736
#4  0xb3190486 in g_free () from /lib/libglib-2.0.so.0
#5  0xb31871c0 in ?? () from /lib/libglib-2.0.so.0
#6  0xb464614d in QEventDispatcherGlib::~QEventDispatcherGlib (this=0xbe67a98, __in_chrg=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:369
#7  0xb45145ba in QThreadPrivate::finish (arg=0xc577840) at thread/qthread_unix.cpp:302
#8  0xb4514e01 in ~__pthread_cleanup_class (arg=0xc577840) at /usr/include/pthread.h:545
#9  QThreadPrivate::start (arg=0xc577840) at thread/qthread_unix.cpp:271
#10 0xb33b5cc9 in start_thread (arg=0x963ffb70) at pthread_create.c:304
#11 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0x95bfeb70 (LWP 3421)):
#0  0xb7790424 in __kernel_vsyscall ()
#1  0xb41940f3 in __lll_lock_wait_private () at ../nptl/sysdeps/unix/sysv/linux/i386/i686/../i486/lowlevellock.S:95
#2  0xb412865f in _L_lock_9687 () from /lib/libc.so.6
#3  0xb4126e56 in __libc_free (mem=0x96b7a00) at malloc.c:3736
#4  0xb3190486 in g_free () from /lib/libglib-2.0.so.0
#5  0xb31871c0 in ?? () from /lib/libglib-2.0.so.0
#6  0xb464614d in QEventDispatcherGlib::~QEventDispatcherGlib (this=0xbe24738, __in_chrg=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:369
#7  0xb45145ba in QThreadPrivate::finish (arg=0xbe669a0) at thread/qthread_unix.cpp:302
#8  0xb4514e01 in ~__pthread_cleanup_class (arg=0xbe669a0) at /usr/include/pthread.h:545
#9  QThreadPrivate::start (arg=0xbe669a0) at thread/qthread_unix.cpp:271
#10 0xb33b5cc9 in start_thread (arg=0x95bfeb70) at pthread_create.c:304
#11 0xb418669e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xaf11b890 (LWP 2357)):
[KCrash Handler]
#7  0xb7790424 in __kernel_vsyscall ()
#8  0xb40e0941 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#9  0xb40e3e42 in abort () at abort.c:92
#10 0xb4118305 in __libc_message (do_abort=2, fmt=0xb41f0280 "*** glibc detected *** %s: %s: 0x%s ***\n") at ../sysdeps/unix/sysv/linux/libc_fatal.c:189
#11 0xb4122501 in malloc_printerr (action=<value optimized out>, str=0x6 <Address 0x6 out of bounds>, ptr=0xbcd7278) at malloc.c:6283
#12 0xb4123d70 in _int_free (av=<value optimized out>, p=<value optimized out>) at malloc.c:4795
#13 0xb4126e5d in __libc_free (mem=0xbcd7278) at malloc.c:3738
#14 0xb450efed in qFree (ptr=0xbcd7278) at global/qmalloc.cpp:60
#15 0xb660fe50 in free (this=0xbff8f05c, alloc=33) at /usr/include/qt4/QtCore/qlist.h:744
#16 QList<QObject*>::detach_helper (this=0xbff8f05c, alloc=33) at /usr/include/qt4/QtCore/qlist.h:703
#17 0xb660d851 in detach_helper (this=0xbca25a8) at /usr/include/qt4/QtCore/qlist.h:709
#18 QList (this=0xbca25a8) at /usr/include/qt4/QtCore/qlist.h:118
#19 QForeachContainer (this=0xbca25a8) at /usr/include/qt4/QtCore/qglobal.h:2242
#20 Digikam::AnimationControl::clear (this=0xbca25a8) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/widgets/graphicsview/itemvisibilitycontroller.cpp:228
#21 0xb660d9d7 in Digikam::ItemVisibilityController::clear (this=0x9666270) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/widgets/graphicsview/itemvisibilitycontroller.cpp:689
#22 0x08316601 in Digikam::FaceGroup::clear (this=0x9680568) at /build/buildd/digikam2-2.0.0~beta4+git110307/utilities/facedetection/facegroup.cpp:614
#23 0x08316bc0 in Digikam::FaceGroup::setInfo (this=0x9680568, info=...) at /build/buildd/digikam2-2.0.0~beta4+git110307/utilities/facedetection/facegroup.cpp:344
#24 0x082caea5 in Digikam::ImagePreviewView::imageLoaded (this=0x965df10) at /build/buildd/digikam2-2.0.0~beta4+git110307/digikam/views/imagepreviewview.cpp:294
#25 0x082cb78b in Digikam::ImagePreviewView::qt_metacall (this=0x965df10, _c=QMetaObject::InvokeMetaMethod, _id=66, _a=0xbff8f24c) at /build/buildd/digikam2-2.0.0~beta4+git110307/obj-i686-linux-gnu/digikam/imagepreviewview.moc:131
#26 0xb461c8ca in QMetaObject::metacall (object=0x965df10, cl=2357, idx=66, argv=0xbff8f24c) at kernel/qmetaobject.cpp:237
#27 0xb462f6ad in QMetaObject::activate (sender=0x93fa150, m=0xb675e2a8, local_signal_index=1, argv=0x0) at kernel/qobject.cpp:3280
#28 0xb66037f7 in Digikam::DImgPreviewItem::loaded (this=0x93fa150) at /build/buildd/digikam2-2.0.0~beta4+git110307/obj-i686-linux-gnu/digikam/dimgpreviewitem.moc:106
#29 0xb66038e4 in Digikam::DImgPreviewItem::slotGotImagePreview (this=0x93fa150, description=..., image=...) at /build/buildd/digikam2-2.0.0~beta4+git110307/libs/widgets/graphicsview/dimgpreviewitem.cpp:281
#30 0xb6603e4c in Digikam::DImgPreviewItem::qt_metacall (this=0x93fa150, _c=QMetaObject::InvokeMetaMethod, _id=22, _a=0x93f06968) at /build/buildd/digikam2-2.0.0~beta4+git110307/obj-i686-linux-gnu/digikam/dimgpreviewitem.moc:86
#31 0xb461c8ca in QMetaObject::metacall (object=0x93fa150, cl=2357, idx=22, argv=0x93f06968) at kernel/qmetaobject.cpp:237
#32 0xb4627df6 in QMetaCallEvent::placeMetaCall (this=0x93536328, object=0x93fa150) at kernel/qobject.cpp:534
#33 0xb46296a2 in QObject::event (this=0x93fa150, e=0x6) at kernel/qobject.cpp:1219
#34 0xb4b77fdc in QApplicationPrivate::notify_helper (this=0x93cbba0, receiver=0x93fa150, e=0x93536328) at kernel/qapplication.cpp:4396
#35 0xb4b7e04e in QApplication::notify (this=0xbff8fc00, receiver=0x93fa150, e=0x93536328) at kernel/qapplication.cpp:3798
#36 0xb571f7da in KApplication::notify (this=0xbff8fc00, receiver=0x93fa150, event=0x93536328) at ../../kdeui/kernel/kapplication.cpp:311
#37 0xb4616b3b in QCoreApplication::notifyInternal (this=0xbff8fc00, receiver=0x93fa150, event=0x93536328) at kernel/qcoreapplication.cpp:732
#38 0xb4619d8b in sendEvent (receiver=0x0, event_type=0, data=0x9381d88) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#39 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9381d88) at kernel/qcoreapplication.cpp:1373
#40 0xb4619f4d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#41 0xb4645a74 in sendPostedEvents (s=0x93ce110) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#42 postEventSourceDispatch (s=0x93ce110) at kernel/qeventdispatcher_glib.cpp:277
#43 0xb3187855 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#44 0xb318b668 in ?? () from /lib/libglib-2.0.so.0
#45 0xb318b848 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#46 0xb4645565 in QEventDispatcherGlib::processEvents (this=0x9381838, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#47 0xb4c39be5 in QGuiEventDispatcherGlib::processEvents (this=0x9381838, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#48 0xb4615609 in QEventLoop::processEvents (this=0xbff8fae4, flags=) at kernel/qeventloop.cpp:149
#49 0xb4615a8a in QEventLoop::exec (this=0xbff8fae4, flags=...) at kernel/qeventloop.cpp:201
#50 0xb461a00f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#51 0xb4b76e07 in QApplication::exec () at kernel/qapplication.cpp:3672
#52 0x0832b3db in main (argc=5, argv=0xbff8fea4) at /build/buildd/digikam2-2.0.0~beta4+git110307/digikam/main/main.cpp:232

Possible duplicates by query: bug 268173, bug 263711, bug 262882, bug 262601, bug 257160.

Reported using DrKonqi
Comment 1 Kristian Karl 2011-03-13 13:07:33 UTC
Created attachment 57919 [details]
New crash information added by DrKonqi

digikam (2.0.0-beta4) on KDE Platform 4.6.1 (4.6.1) using Qt 4.7.0

- What I was doing when the application crashed:

I was trying ou the new face recognition, and when I confirmed a face for one image, digikam crashed.

-- Backtrace (Reduced):
#12 0x00007fcb0d357f3d in QEventLoop::exec (this=<value optimized out>, flags=<value optimized out>) at kernel/qeventloop.cpp:214
#13 0x00007fcb0d35bebb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#14 0x00000000006ec18d in main (argc=<value optimized out>, argv=<value optimized out>) at /build/buildd/digikam2-2.0.0~beta4+git110307/digikam/main/main.cpp:232
Comment 2 Marcel Wiesweg 2011-03-13 16:05:26 UTC
les: Looks like a valid crash. Could not reproduce so far, but that means nothing in this case. I'm not quite clear if you could reproduce only once, or each time?

Karl: There is an exception thrown and rethrown, rendering the backtrace useless. You need to run digikam under gdb, type "catch throw", then "run", provoke the crash, get a backtrace with "bt".
Comment 3 les 2011-03-13 22:34:29 UTC
Yes I seem to be able to reproduce this each time. I have just tried 5 one after another - but I cancelled the crash reports.

(In reply to comment #2)
> les: Looks like a valid crash. Could not reproduce so far, but that means
> nothing in this case. I'm not quite clear if you could reproduce only once, or
> each time?
> 
> Karl: There is an exception thrown and rethrown, rendering the backtrace
> useless. You need to run digikam under gdb, type "catch throw", then "run",
> provoke the crash, get a backtrace with "bt".
Comment 4 Marcel Wiesweg 2011-03-13 22:47:57 UTC
Yes I got it now as well. Too late tonight for thinking, will get back to it tomorrow.
Comment 5 Marcel Wiesweg 2011-03-14 22:37:43 UTC
Git commit 398f2d97d7f6ebed1057a98a00eecdbb1640280c by Marcel Wiesweg.
Committed on 14/03/2011 at 22:04.
Pushed by mwiesweg into branch 'master'.

Disconnect the animation before deleting it.
Otherwise, the animation may emit the aninmationFinished signal which triggers
object deletion just from within a scope where the same objects are deleted.
This crashes.

BUG: 268300

M  +1    -2    NEWS     
M  +2    -1    libs/widgets/graphicsview/itemvisibilitycontroller.cpp     

http://commits.kde.org/digikam/398f2d97d7f6ebed1057a98a00eecdbb1640280c
Comment 6 Marcel Wiesweg 2011-03-17 19:54:28 UTC
*** Bug 268761 has been marked as a duplicate of this bug. ***
Comment 7 Marcel Wiesweg 2011-04-18 22:25:49 UTC
*** Bug 268046 has been marked as a duplicate of this bug. ***