Disconnect the animation before deleting it. Otherwise, the animation may emit the aninmationFinished signal which triggers object deletion just from within a scope where the same objects are deleted. This crashes.

BUG: 268300